grid fixed.... not responsive though

--- a/css/lazyloader.css
+++ b/css/lazyloader.css
@@ -1,46 +1,68 @@
 img {
-    max-height: 200px;
+    
+}
+.clear {
+    clear: both;
 }
 body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: repeat(6,1fr);
     grid-gap: 10px;
+    max-width: 100%;
 }
 #image1 {
     grid-row: 1/3;
-    max-height: 400px;
+    grid-column: 1/2;
+    height: 600px;
+    width: 400px;
 }
 #image2 {
     grid-row: 1/2;
     grid-column: 2/3;
-    max-height: 400px;
+    height: 300px;
+    width: 400px;
 }#image3 {
-    
-    max-height: 400px;
+    grid-row: 2/3;
+    grid-column: 2/3;
+    height: 300px;
+    width: 400px;
 }#image4 {
-    grid-row: 
-    max-height: 400px;
+    grid-row: 1/2;
+    grid-column: 3/4;
+    height: 300px;
+    width: 400px;
 }
 #image5 {
     grid-row: 3/5;
     grid-column: 1/3;
-    max-height: 400px;
+    width: 820px;
+    height: 600px;
 }
 #image6 {
-    grid-row:
-    max-height: 400px;
+    grid-row: 2/4;
+    grid-column: 3/4;
+    height: 600px;
+    width: 400px;
 }#image7 {
-    grid-row: 
-    max-height: 400px;
+    grid-row: 4/5;
+    grid-column: 3/4;
+    height: 300px;
+    width: 400px;
 }#image8 {
-    grid-row: 
-    max-height: 400px;
+    grid-row: 5/6;
+    grid-column: 1/2;
+    height: 300px;
+    width: 400px;
 }#image9 {
-    grid-row: 
-    max-height: 400px;
+    grid-row: 5/7;
+    grid-column: 2/4;
+    width: 820px;
+    height: 600px;
 }
 #image10 {
-    grid-row: 
-    max-height: 400px;
+    grid-row: 6/7;
+    grid-column: 1/2;
+    height: 300px;
+    width: 400px;
 }
